<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeekerMap" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2" >
        
        <TextView
            android:id="@+id/snitch_timer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="-35dp"
            android:text="@string/timer"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="135sp"
            android:gravity="bottom"
            android:layout_weight="1.1" />

        <com.google.android.maps.MapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mapview"
            android:layout_width="fill_parent"
            android:layout_height="125dp"
            android:apiKey="0rY16IPVdYrUh-nxtZsgdEMFi3UoMczC5Mjgdpw"
            android:clickable="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.6" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/button_snitch_tagged"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="70dp"
            android:layout_weight="5.4"
            android:clickable="true" >

            <ImageView
                android:id="@+id/image_snitch_tagged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/access_continue"
                android:src="@drawable/plus_icon" />

            <TextView
                android:id="@+id/text_snitch_tagged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/image_snitch_tagged"
                android:fontFamily="roboto"
                android:text="@string/seeker_continue"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
<!-- exported api key: 0rY16IPVdYrUh-nxtZsgdEMFi3UoMczC5Mjgdpw -->
<!-- chris debug api key: 0rY16IPVdYrX033VAxI2U6uo9zkOqDL0zGsV8lw -->
<!-- michael debug api key: 0WTA4cp7YKdmtTeLD281zJ3f7S4BI3feToNMuHQ -->
<!-- Ryan debug api key: 0QAi9lFxlS2caS6sAqnBsCcW4Z38uZCIC1bd5Dw -->
